--- a/src/screens/Element/style.css
+++ b/src/screens/Element/style.css
@@ -1790,6 +1790,10 @@
   position: relative;
 }
 
+.element .footer-container-placeholder {
+  height: 40px;
+}
+
 .element .cc {
   align-items: center;
   display: inline-flex;
