添加 meta 描述跟圖片

--- a/src/screens/Element/style.css
+++ b/src/screens/Element/style.css
@@ -1505,13 +1505,13 @@
 }
 
 .element .ellipse-41 {
-  background-color: #000000;
+  background-color: #ffffff;
   border-color: #ffffff;
   position: relative;
 }
 
 .element .ellipse-42 {
-  background-color: #000000;
+  background-color: #ffffff;
   border-color: #ffffff;
   position: relative;
 }
